--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,13 +5,68 @@
 
 @theme {
   /* GrayScale */
-  --color-gray-50: #f3f3f5;
-  --color-gray-100: #e6e6e6;
-  --color-gray-400: #a0a0a0;
-  --color-gray-500: #4b4b4b;
-  --color-gray-600: #020202;
-  --color-softwhite: #fafafa;
-  --color-purewhite: #ffffff;
+  --color-gray-50: #fafafa;
+  --color-gray-100: #f5f5f5;
+  --color-gray-200: #eeeeee;
+  --color-gray-300: #e0e0e0;
+  --color-gray-400: #bdbdbd;
+  --color-gray-500: #9e9e9e;
+  --color-gray-600: #757575;
+  --color-gray-700: #616161;
+  --color-gray-800: #424242;
+  --color-gray-900: #222222;
+
+  --color-orange-50: #fef0e6;
+  --color-orange-100: #fccfb0;
+  --color-orange-200: #fab88a;
+  --color-orange-300: #f89755;
+  --color-orange-400: #f78334;
+  --color-orange-500: #f56401;
+  --color-orange-600: #df5b01;
+  --color-orange-700: #ae4701;
+  --color-orange-800: #873701;
+  --color-orange-900: #672a00;
+
+  --color-red-50: #fdeaea;
+  --color-red-100: #fabdbd;
+  --color-red-200: #f89d9d;
+  --color-red-300: #f47170;
+  --color-red-400: #f25555;
+  --color-red-500: #ef2b2a;
+  --color-red-600: #d92726;
+  --color-red-700: #aa1f1e;
+  --color-red-800: #831817;
+  --color-red-900: #641212;
+
+  --color-blue-50: #e6f2ff;
+  --color-blue-100: #b2d7fe;
+  --color-blue-200: #8cc3fe;
+  --color-blue-300: #58a8fe;
+  --color-blue-400: #3897fd;
+  --color-blue-500: #067dfd;
+  --color-blue-600: #0572e6;
+  --color-blue-700: #0459b4;
+  --color-blue-800: #03458b;
+  --color-blue-900: #03356a;
+
+  --color-primary-normal: #f56401;
+  --color-primary-subtle: #fef0e6;
+  --color-label: #000000;
+  --color-label-subtle: #424242;
+  --color-label-subtler: #9e9e9e;
+  --color-label-blue: #067dfd;
+  --color-label-red: #ef2b2a;
+
+  --color-fill-black: #000000;
+  --color-fill-gray-200: #eeeeee;
+  --color-fill-gray-100: #f5f5f5;
+  --color-fill-blue-50: #e6f2ff;
+  --color-fill-red-50: #fdeaea;
+
+  --color-background: #ffffff;
+  --color-background-subtle: #f5f5f5;
+  --color-background-subtler: #fafafa;
+  --color-background-divider: #eeeeee;
 
   /* Display */
   --text-display-xl: 36px;
@@ -22,14 +77,14 @@
   --text-display-lg--line-height: 1.3;
   --text-display-lg--font-weight: 700;
 
-  /* Headline */
-  --text-headline-lg: 22px;
-  --text-headline-lg--line-height: 1.4;
-  --text-headline-lg--font-weight: 600;
+  /* heading */
+  --text-heading-lg: 22px;
+  --text-heading-lg--line-height: 1.4;
+  --text-heading-lg--font-weight: 600;
 
-  --text-headline-md: 18px;
-  --text-headline-md--line-height: 1.4;
-  --text-headline-md--font-weight: 600;
+  --text-heading-md: 18px;
+  --text-heading-md--line-height: 1.4;
+  --text-heading-md--font-weight: 600;
 
   /* Title */
   --text-title-lg: 16px;
@@ -41,7 +96,7 @@
   --text-title-md--font-weight: 500;
 
   /* Body */
-  --text-body-xl: 14px;
+  /* --text-body-xl: 14px;
   --text-body-xl--line-height: 1.6;
   --text-body-xl--font-weight: 400;
 
@@ -51,7 +106,14 @@
 
   --text-body-md: 13px;
   --text-body-md--line-height: 1.6;
-  --text-body-md--font-weight: 400;
+  --text-body-md--font-weight: 400; */
+
+  /* --text-body1-semibold 
+    --text-body1-medium
+      --text-body1-regular
+        --text-body2-semibold 
+    --text-body2-medium
+      --text-body2-regular */
 
   /* Caption */
   --text-caption-md: 12px;
@@ -75,6 +137,14 @@
   --text-button-sm: 12px;
   --text-button-sm--line-height: 1;
   --text-button-sm--font-weight: 600;
+
+  /* --text-label1-semibold
+  --text-label1-medium
+  --text-label1-regular
+  
+  --text-label2-semibold
+  --text-label2-medium
+  --text-label2-regular */
 }
 
 @theme inline {
@@ -189,7 +259,13 @@
 
 @layer utilities {
   .font-suit {
-    font-family: 'Suit', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+    font-family:
+      'Suit',
+      system-ui,
+      -apple-system,
+      BlinkMacSystemFont,
+      'Segoe UI',
+      sans-serif;
   }
 }
 
@@ -198,7 +274,7 @@
     @apply border-border outline-ring/50 font-suit;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background-subtle text-foreground;
   }
 }
 
