--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@
   --color-gray-700: #616161;
   --color-gray-800: #424242;
   --color-gray-900: #222222;
-
+  /* OrangeScale */
   --color-orange-50: #fef0e6;
   --color-orange-100: #fccfb0;
   --color-orange-200: #fab88a;
@@ -26,7 +26,7 @@
   --color-orange-700: #ae4701;
   --color-orange-800: #873701;
   --color-orange-900: #672a00;
-
+  /* RedScale */
   --color-red-50: #fdeaea;
   --color-red-100: #fabdbd;
   --color-red-200: #f89d9d;
@@ -37,7 +37,7 @@
   --color-red-700: #aa1f1e;
   --color-red-800: #831817;
   --color-red-900: #641212;
-
+  /* BlueScale */
   --color-blue-50: #e6f2ff;
   --color-blue-100: #b2d7fe;
   --color-blue-200: #8cc3fe;
@@ -48,7 +48,7 @@
   --color-blue-700: #0459b4;
   --color-blue-800: #03458b;
   --color-blue-900: #03356a;
-
+  /* Semantic */
   --color-primary-normal: #f56401;
   --color-primary-subtle: #fef0e6;
   --color-label: #000000;
@@ -56,18 +56,18 @@
   --color-label-subtler: #9e9e9e;
   --color-label-blue: #067dfd;
   --color-label-red: #ef2b2a;
-
+  /* fill */
   --color-fill-black: #000000;
   --color-fill-gray-200: #eeeeee;
   --color-fill-gray-100: #f5f5f5;
   --color-fill-blue-50: #e6f2ff;
   --color-fill-red-50: #fdeaea;
-
+  /* Background */
   --color-background: #ffffff;
   --color-background-subtle: #f5f5f5;
   --color-background-subtler: #fafafa;
   --color-background-divider: #eeeeee;
-
+  /* TEXT */
   /* Display */
   --text-display-xl: 36px;
   --text-display-xl--line-height: 1.3;
@@ -95,25 +95,68 @@
   --text-title-md--line-height: 1.5;
   --text-title-md--font-weight: 500;
 
+  /* Heading */
+  --text-heading-1: 22px;
+  --text-heading-1--line-height: 28px;
+  --text-heading-1--font-weight: 600;
+
+  --text-heading-2: 20px;
+  --text-heading-2--line-height: 28px;
+  --text-heading-2--font-weight: 600;
+
+  --text-heading-3: 18px;
+  --text-heading-3--line-height: 28px;
+  --text-heading-3--font-weight: 600;
+
   /* Body */
-  /* --text-body-xl: 14px;
-  --text-body-xl--line-height: 1.6;
-  --text-body-xl--font-weight: 400;
+  --text-body-1-semibold: 16px;
+  --text-body-1-semibold--line-height: 20px;
+  --text-body-1-semibold--font-weight: 600;
 
-  --text-body-lg: 14px;
-  --text-body-lg--line-height: 1.6;
-  --text-body-lg--font-weight: 400;
+  --text-body-1-medium: 16px;
+  --text-body-1-medium--line-height: 20px;
+  --text-body-1-medium--font-weight: 500;
 
-  --text-body-md: 13px;
-  --text-body-md--line-height: 1.6;
-  --text-body-md--font-weight: 400; */
+  --text-body-1-regular: 16px;
+  --text-body-1-regular--line-height: 20px;
+  --text-body-1-regular--font-weight: 400;
 
-  /* --text-body1-semibold 
-    --text-body1-medium
-      --text-body1-regular
-        --text-body2-semibold 
-    --text-body2-medium
-      --text-body2-regular */
+  --text-body-2-semibold: 14px;
+  --text-body-2-semibold--line-height: 20px;
+  --text-body-2-semibold--font-weight: 600;
+
+  --text-body-2-medium: 14px;
+  --text-body-2-medium--line-height: 20px;
+  --text-body-2-medium--font-weight: 500;
+
+  --text-body-2-regular: 14px;
+  --text-body-2-regular--line-height: 20px;
+  --text-body-2-regular--font-weight: 400;
+
+  /* Label */
+  --text-label-1-semibold: 12px;
+  --text-label-1-semibold--line-height: 16px;
+  --text-label-1-semibold--font-weight: 600;
+
+  --text-label-1-medium: 12px;
+  --text-label-1-medium--line-height: 16px;
+  --text-label-1-medium--font-weight: 500;
+
+  --text-label-1-regular: 12px;
+  --text-label-1-regular--line-height: 16px;
+  --text-label-1-regular--font-weight: 400;
+
+  --text-label-2-semibold: 11px;
+  --text-label-2-semibold--line-height: 16px;
+  --text-label-2-semibold--font-weight: 600;
+
+  --text-label-2-medium: 11px;
+  --text-label-2-medium--line-height: 16px;
+  --text-label-2-medium--font-weight: 500;
+
+  --text-label-2-regular: 11px;
+  --text-label-2-regular--line-height: 16px;
+  --text-label-2-regular--font-weight: 400;
 
   /* Caption */
   --text-caption-md: 12px;
@@ -137,14 +180,6 @@
   --text-button-sm: 12px;
   --text-button-sm--line-height: 1;
   --text-button-sm--font-weight: 600;
-
-  /* --text-label1-semibold
-  --text-label1-medium
-  --text-label1-regular
-  
-  --text-label2-semibold
-  --text-label2-medium
-  --text-label2-regular */
 }
 
 @theme inline {
