--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -216,15 +216,20 @@
   --color-popover: var(--popover);
   --color-card-foreground: var(--card-foreground);
   --color-card: var(--card);
-  --radius-sm: calc(var(--radius) - 4px);
-  --radius-md: calc(var(--radius) - 2px);
-  --radius-lg: var(--radius);
-  --radius-xl: calc(var(--radius) + 4px);
+  --radius-1: 4px;
+  --radius-2: 8px;
+  --radius-3: 12px;
+  --radius-4: 16px;
+  --radius-5: 20px;
+  --radius-6: 24px;
+  --radius-7: 28px;
+  --shadow-1: var(--shadow-1);
   --font-suit: 'Suit';
 }
 
 :root {
   --radius: 0.625rem;
+  --shadow-1: 0 0px 8px rgba(0, 0, 0, 0.08);
   --background: oklch(1 0 0);
   --foreground: oklch(0.13 0.028 261.692);
   --card: oklch(1 0 0);
@@ -309,7 +314,7 @@
     @apply border-border outline-ring/50 font-suit;
   }
   body {
-    @apply bg-background-subtle text-foreground;
+    @apply bg-white text-foreground;
   }
 }
 
